BOAC-739 Wrapping fixes for long group names

--- a/boac/static/app/student/student.css
+++ b/boac/static/app/student/student.css
@@ -269,8 +269,13 @@
 }
 
 .student-group-checkbox {
+  display: flex;
   font-size: 12px;
   padding: 1px;
+}
+
+.student-group-checkbox-label {
+  margin-left: 5px;
 }
 
 .student-group-checkbox-primary-label {
